# NiceScope

./: CMakeLists.txt  FFT.cpp  FFT.hpp  Makefile  README.md  Spectrum.cpp  Spectrum.hpp  audio_callback.cpp  audio_callback.hpp  fragment_shader.glsl  main.cpp  main.hpp  portaudio_backend.cpp  portaudio_backend.hpp
docs/: notes.md
src/: FFT.cpp  FFT.hpp  Scope.cpp  Scope.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Spectrum.cpp  Spectrum.hpp  main.cpp  main.hpp  portaudio_backend.cpp  portaudio_backend.hpp
